--- a/test_x_ray.ipynb
+++ b/test_x_ray.ipynb
@@ -130,6 +130,47 @@
     "accuracy = np.sum(y_true == y_pred) / len(y_true) * 100\n",
     "print(f\"Accuracy: {accuracy:.2f}%\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rifat\\miniconda3\\envs\\mlweb\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\rifat\\miniconda3\\envs\\mlweb\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "C:\\Users\\rifat\\AppData\\Local\\Temp\\ipykernel_22520\\3577953163.py:15: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load('model9_5.pt'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torchvision.models as models\n",
+    "\n",
+    "# Device setup for CUDA or CPU\n",
+    "Device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "def download_and_save_model():\n",
+    "    \"\"\"Download and save the ResNet-18 model including both architecture and weights.\"\"\"\n",
+    "    model = models.resnet18(pretrained=True)  # Download pretrained ResNet-18\n",
+    "    model.fc = nn.Linear(model.fc.in_features, 2)  # Modify for binary classification\n",
+    "    \n",
+    "    # Save the entire model to a file (architecture + weights)\n",
+    "    model.load_state_dict(torch.load('model9_5.pt'))\n",
+    "    torch.save(model, 'full_pn.pth')\n",
+    "\n",
+    "\n",
+    "# Download and save the model\n",
+    "download_and_save_model()"
+   ]
   }
  ],
  "metadata": {
